--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,7 +1,7 @@
 @use "../node_modules/bootstrap/scss/bootstrap";
 
 body {
-  background-color: cadetblue;
+  background-color: rgb(0, 0, 0);
 }
 
 img {
