--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,7 +1,10 @@
 @use "../node_modules/bootstrap/scss/bootstrap";
+@use '../scss/partials/variables' as*;
 
 body {
-  background-color: rgb(0, 0, 0);
+  background-color: $dark_gray;
+  height: 100vh;
+
 }
 
 img {
